# msg_prototype

msg_prototype/: CMakeLists.txt  main.cpp  qml.qrc
msg_prototype/src/: CMakeLists.txt  client.cpp  client.h
msg_prototype/ui/: AuthorizationPage.qml  FriendsPage.qml  main.qml
